[package]
name = "open-rpc"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "relaxed"]

std = ["serde/std", "serde_json/std"]
relaxed = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" ,default-features = false, optional = true }