[package]
name = "open-rpc"
version = "0.1.0"
edition = "2021"
description = "Definition of the types used in the OpenRPC Specification."
readme = "README.md"
repository = "https://github.com/nils-mathieu/open-rpc"
license = "MIT"
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
keywords = ["openrpc", "rpc", "json-rpc", "json", "json-schema"]

[features]
default = ["std", "relaxed"]

std = ["serde/std", "serde_json/std"]
relaxed = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" ,default-features = false, optional = true }